custom elements and basic layout ready to go

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>animations</title>
+    <title>[Site Name]: home</title>
     <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
-    <h1>works</h1>
+    <hp-content>
+      <hp-presentation>
+        <hp-slide>
+          <hp-title> works </hp-title>
+        </hp-slide>
+      </hp-presentation>
+    </hp-content>
     <script src="./js/main.js" charset="utf-8"></script>
   </body>
 </html>
