--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
   <body>
     <hp-content>
       <hp-presentation>
+        <hp-slide class="active">
+          <hp-title> Which shape </hp-title>
+            <hp-chooser>
+              <img src="./images/triangle.svg">
+              <img src="./images/circle.svg">
+              <img src="./images/diamond.svg">
+              <img src="./images/square.svg">
+            </hp-chooser>
+          <hp-title> doesn't belong? </hp-title>
+        </hp-slide>
         <hp-slide>
-          <hp-title> works </hp-title>
+          <hp-title> Which shape </hp-title>
+            <hp-chooser>
+              <img src="./images/triangle.svg">
+              <img src="./images/circle.svg">
+              <img src="./images/diamond.svg">
+              <img src="./images/square.svg">
+            </hp-chooser>
+          <hp-title> doesn't belong? </hp-title>
         </hp-slide>
       </hp-presentation>
     </hp-content>
