--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
         <hp-slide>
           <hp-title> Which shape </hp-title>
-            <hp-chooser>
+            <hp-chooser class="chosen">
               <img src="./images/triangle.svg">
-              <img src="./images/circle.svg">
+              <img class="chosen" src="./images/circle.svg">
               <img src="./images/diamond.svg">
               <img src="./images/square.svg">
             </hp-chooser>
           <hp-title> doesn't belong? </hp-title>
         </hp-slide>
-        
+
       </hp-presentation>
     </hp-content>
     <script src="./js/main.js" charset="utf-8"></script>
