--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <hp-slide data-autoadvance="3500">
           <hp-title> Which shape </hp-title>
-            <hp-chooser class="chosen">
+            <hp-chooser class="chosen animate">
               <img src="./images/triangle.svg">
               <img class="chosen" src="./images/circle.svg">
               <img src="./images/diamond.svg">
@@ -32,14 +32,14 @@
         </hp-slide>
 
         <hp-slide>
-          <hp-title> Which shape </hp-title>
-            <hp-chooser class="chosen">
+          <hp-title> How did </hp-title>
+            <hp-chooser class="fixed">
               <img src="./images/triangle.svg">
               <img class="chosen" src="./images/circle.svg">
               <img src="./images/diamond.svg">
               <img src="./images/square.svg">
             </hp-chooser>
-          <hp-title> doesn't belong? </hp-title>
+          <hp-title> you know? </hp-title>
         </hp-slide>
 
       </hp-presentation>
