--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <hp-title> doesn't belong? </hp-title>
         </hp-slide>
 
-        <hp-slide>
+        <hp-slide data-autoadvance="animationend">
           <hp-title> How did </hp-title>
             <hp-chooser class="fixed">
               <img src="./images/triangle.svg">
@@ -40,6 +40,16 @@
               <img src="./images/square.svg">
             </hp-chooser>
           <hp-title> you know? </hp-title>
+        </hp-slide>
+
+        <hp-slide data-autoadvance="3500">
+          <hp-title>How did</hp-title>
+          <hp-learn class="match">
+            <hp-learn-no>no</hp-learn-no>
+            <img src="images/circle.svg">
+            <hp-learn-yes>yes</hp-learn-yes>
+          </hp-learn>
+          <hp-title>you know?</hp-title>
         </hp-slide>
 
       </hp-presentation>
