--- a/index.html
+++ b/index.html
@@ -42,14 +42,44 @@
           <hp-title> you know? </hp-title>
         </hp-slide>
 
-        <hp-slide data-autoadvance="3500">
-          <hp-title>How did</hp-title>
+        <hp-slide data-autoadvance="1500">
+          <hp-title> How did </hp-title>
           <hp-learn class="match">
             <hp-learn-no>no</hp-learn-no>
             <img src="images/circle.svg">
             <hp-learn-yes>yes</hp-learn-yes>
           </hp-learn>
-          <hp-title>you know?</hp-title>
+          <hp-title> you know? </hp-title>
+        </hp-slide>
+
+        <hp-slide id="tfo" data-autoadvance="animationend">
+          <hp-title> How did </hp-title>
+          <hp-learn>
+            <hp-learn-no>no</hp-learn-no>
+            <img src="images/circle.svg">
+            <hp-learn-yes>yes</hp-learn-yes>
+          </hp-learn>
+          <hp-title> you know? </hp-title>
+        </hp-slide>
+
+        <hp-slide data-autoadvance="1500">
+          <hp-title> Answer: you </hp-title>
+          <hp-learn>
+            <hp-learn-no>no</hp-learn-no>
+            <img src="images/circle.svg">
+            <hp-learn-yes>yes</hp-learn-yes>
+          </hp-learn>
+          <hp-title> learned. </hp-title>
+        </hp-slide>
+
+        <hp-slide data-onshow="runLearningSequence">
+          <hp-title> Answer: you </hp-title>
+          <hp-learn>
+            <hp-learn-no>no</hp-learn-no>
+            <img src="images/circle.svg">
+            <hp-learn-yes>yes</hp-learn-yes>
+          </hp-learn>
+          <hp-title> learned. </hp-title>
         </hp-slide>
 
       </hp-presentation>
