--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>[Site Name]: home</title>
+    <title>Interactive Animations with JavaScrizzurp and CSS</title>
     <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
